<!--
  Copyright 2013 CRS4
   
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">ModuleTester</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_main">MainActivity</string>
    <string name="title_position_activity">MapActivity</string>
    <string name="title_step_activity">StepActivity</string>
    <string name="title_rotation_activity">RotationActivity</string>
    <string name="title_path_activity">Path Activity</string>

    <string name="button">Button</string>
    <string name="buttonTestRotation_name">Test Rotation</string>
    <string name="buttonTestStep_name">Test Step</string>
    <string name="buttonTestPosition_name">Test Position (map)</string>
    <string name="buttonTestPath_name">Test Path</string>
    <string name="buttonTestDijkstra_name">Test Dijkstra</string>
    <string name="buttonTestCheckpoint_name">Test Checkpoint</string>
</resources>
